# sage-bitrix-configurador

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
src/: App.jsx  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  encryption.rs  main.rs  service.rs
src/components/: Bitrix24Config.jsx  Companies.jsx  ConfigDebugPanel.jsx  Dashboard.jsx  DatabaseConfig.jsx  FieldMapping.jsx  GeneralSettings.jsx  LanguageSwitcher.jsx  Login.jsx  ServiceStatusIndicator.jsx  ServiceTestComponent.jsx  SimpleServiceStatusIndicator.jsx
src/services/: BitrixFieldService.js  authService.js
